Further text cleaning and topic modelling

--- a/notebooks/20201203-topic-modelling-slavery-statements.ipynb
+++ b/notebooks/20201203-topic-modelling-slavery-statements.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "id": "l7WeR-r6uf4x"
    },
@@ -12,24 +22,46 @@
     "from sklearn.feature_extraction.text import (CountVectorizer,\n",
     "                                             TfidfVectorizer)\n",
     "from sklearn.decomposition import LatentDirichletAllocation\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from os import getcwd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RANDOM_STATE = 40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_PATH = getcwd()\n",
+    "DATA_PATH = DATA_PATH.replace(\"notebooks\", \"\")\n",
+    "DATA_PATH += \"data\"\n",
+    "SHEETS_PATH = DATA_PATH + \"\\\\sheets\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "id": "19-wl6Uw8GLu"
    },
    "outputs": [],
    "source": [
-    "data = pd.read_excel(\"subset_data.xlsx\")\n",
+    "data = pd.read_excel(f\"{SHEETS_PATH}\\\\subset_data.xlsx\")\n",
     "data.fillna(\"#NA\", inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -60,61 +92,77 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>statement_hash</th>\n",
+       "      <th>URL</th>\n",
        "      <th>final_statement_cleaned</th>\n",
-       "      <th>cleaned_statements</th>\n",
+       "      <th>final_statement_cleaned_2</th>\n",
+       "      <th>0.99%dup</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>54a3be2e54d7e83866249741309a4fec</td>\n",
+       "      <td>https://img1.wsimg.com/blobby/go/7695baff-3f0f...</td>\n",
        "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
        "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>c20780d56b38fdee0d585b1dcf32b246</td>\n",
-       "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
-       "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
+       "      <td>https://1spatial.com/who-we-are/legal/modern-s...</td>\n",
+       "      <td>independent research edison investments modern...</td>\n",
+       "      <td>independent research edison investments modern...</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>ba93a3f728608e0a8aa60765e7433654</td>\n",
-       "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
-       "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
+       "      <td>https://www.shazans.com/slavery-and-human-traf...</td>\n",
+       "      <td>slavery human trafficking statement slavery hu...</td>\n",
+       "      <td>slavery human traffic statement slavery human ...</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>160f2895b670d4054d3dfd9ae1231b87</td>\n",
-       "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
-       "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
+       "      <td>https://www.business-humanrights.org/sites/def...</td>\n",
+       "      <td>modern slavery atement modern slavery atement ...</td>\n",
+       "      <td>modern slavery atement modern slavery atement ...</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>c7892425aa35519093b7a0179d245a0d</td>\n",
-       "      <td>k line holdinc europe ltd modern slavery act t...</td>\n",
-       "      <td>line holdinc europe ltd modern slavery act tra...</td>\n",
+       "      <td>https://www.2agriculture.com/wp-content/upload...</td>\n",
+       "      <td>modern slavery act slavery human trafficking s...</td>\n",
+       "      <td>modern slavery act slavery human traffic state...</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     statement_hash  ...                                 cleaned_statements\n",
-       "0  54a3be2e54d7e83866249741309a4fec  ...  holdinc europe ltd modern slavery act transpar...\n",
-       "1  c20780d56b38fdee0d585b1dcf32b246  ...  holdinc europe ltd modern slavery act transpar...\n",
-       "2  ba93a3f728608e0a8aa60765e7433654  ...  holdinc europe ltd modern slavery act transpar...\n",
-       "3  160f2895b670d4054d3dfd9ae1231b87  ...  holdinc europe ltd modern slavery act transpar...\n",
-       "4  c7892425aa35519093b7a0179d245a0d  ...  line holdinc europe ltd modern slavery act tra...\n",
+       "                                                 URL  \\\n",
+       "0  https://img1.wsimg.com/blobby/go/7695baff-3f0f...   \n",
+       "1  https://1spatial.com/who-we-are/legal/modern-s...   \n",
+       "2  https://www.shazans.com/slavery-and-human-traf...   \n",
+       "3  https://www.business-humanrights.org/sites/def...   \n",
+       "4  https://www.2agriculture.com/wp-content/upload...   \n",
        "\n",
-       "[5 rows x 3 columns]"
+       "                             final_statement_cleaned  \\\n",
+       "0  holdinc europe ltd modern slavery act transpar...   \n",
+       "1  independent research edison investments modern...   \n",
+       "2  slavery human trafficking statement slavery hu...   \n",
+       "3  modern slavery atement modern slavery atement ...   \n",
+       "4  modern slavery act slavery human trafficking s...   \n",
+       "\n",
+       "                           final_statement_cleaned_2  0.99%dup  \n",
+       "0  holdinc europe ltd modern slavery act transpar...     False  \n",
+       "1  independent research edison investments modern...     False  \n",
+       "2  slavery human traffic statement slavery human ...     False  \n",
+       "3  modern slavery atement modern slavery atement ...     False  \n",
+       "4  modern slavery act slavery human traffic state...     False  "
       ]
      },
-     "execution_count": 7,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 6,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -124,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "66EntRIr8LwH"
    },
@@ -132,12 +180,12 @@
    "source": [
     "N_GRAMS = (1, 1)\n",
     "count_vect = CountVectorizer(ngram_range=N_GRAMS)\n",
-    "X = count_vect.fit_transform(data[\"cleaned_statements\"].values) "
+    "X = count_vect.fit_transform(data[\"final_statement_cleaned_2\"].values) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -165,224 +213,68 @@
     {
      "data": {
       "text/plain": [
-       "LatentDirichletAllocation(batch_size=128, doc_topic_prior=None,\n",
-       "                          evaluate_every=-1, learning_decay=0.7,\n",
-       "                          learning_method='batch', learning_offset=10.0,\n",
-       "                          max_doc_update_iter=100, max_iter=10,\n",
-       "                          mean_change_tol=0.001, n_components=5, n_jobs=-1,\n",
-       "                          perp_tol=0.1, random_state=None,\n",
-       "                          topic_word_prior=None, total_samples=1000000.0,\n",
-       "                          verbose=1)"
+       "LatentDirichletAllocation(n_jobs=-1, random_state=40, verbose=1)"
       ]
      },
-     "execution_count": 26,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 8,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "N_TOPICS = 5\n",
-    "LDA = LatentDirichletAllocation(n_components=N_TOPICS, n_jobs=-1, verbose=1)\n",
+    "N_TOPICS = 10\n",
+    "LDA = LatentDirichletAllocation(n_components=N_TOPICS, n_jobs=-1, verbose=1, random_state=RANDOM_STATE)\n",
     "LDA.fit(X)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Topic 0: ['service', 'us', 'contact', 'support', 'care', 'news', 'new', 'solutions', 'home', 'people', 'career', 'products', 'energy', 'water', 'help']\n",
+      "\n",
+      "Topic 1: ['slavery', 'modern', 'traffic', 'human', 'supply', 'chain', 'business', 'ensure', 'statement', 'policy', 'act', 'risk', 'suppliers', 'take', 'within']\n",
+      "\n",
+      "Topic 2: ['use', 'term', 'may', 'site', 'information', 'shall', 'website', 'service', 'content', 'condition', 'include', 'right', 'order', 'time', 'without']\n",
+      "\n",
+      "Topic 3: ['human', 'suppliers', 'supply', 'conduct', 'chain', 'traffic', 'code', 'supplier', 'labor', 'slavery', 'business', 'compliance', 'include', 'audit', 'employees']\n",
+      "\n",
+      "Topic 4: ['www', 'https', 'com', 'uk', 'en', 'cking', 'class', 'store', 'div', 'co', 'tra', 'http', 'span', 'brand', 'shop']\n",
+      "\n",
+      "Topic 5: ['information', 'use', 'data', 'us', 'personal', 'cookies', 'may', 'website', 'site', 'service', 'privacy', 'please', 'provide', 'contact', 'process']\n",
+      "\n",
+      "Topic 6: ['service', 'firm', 'financial', 'include', 'risk', 'council', 'bank', 'investment', 'management', 'modern', 'slavery', 'business', 'provide', 'human', 'clients']\n",
+      "\n",
+      "Topic 7: ['slavery', 'human', 'business', 'suppliers', 'modern', 'risk', 'traffic', 'supply', 'chain', 'conduct', 'statement', 'include', 'code', 'company', 'supplier']\n",
+      "\n",
+      "Topic 8: ['group', 'company', 'limit', 'business', 'right', 'uk', 'human', 'work', 'ltd', 'employees', 'products', 'policy', 'statement', 'labour', 'suppliers']\n",
+      "\n",
+      "Topic 9: ['modern', 'slavery', 'risk', 'suppliers', 'work', 'supply', 'right', 'chain', 'labour', 'human', 'include', 'business', 'audit', 'train', 'ethical']\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "N_TOP_WORDS = 15 \n",
+    "feature_names = count_vect.get_feature_names()\n",
+    "topic_components = LDA.components_ \n",
+    "# Note: topic words are words with high LDA component values\n",
+    "for i in range(N_TOPICS):\n",
+    "    print(f\"Topic {i}: {[feature_names[j] for j in np.argsort(topic_components[i])[::-1][:N_TOP_WORDS]]}\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "wh0XAY0L9crb"
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "topic_components = LDA.components_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "mETBnFVC-ixN",
-    "outputId": "0bd6113d-9973-4334-8729-609a1f0ca78e"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['act',\n",
-       " 'ensure',\n",
-       " 'statement',\n",
-       " 'business',\n",
-       " 'chain',\n",
-       " 'supply',\n",
-       " 'modern',\n",
-       " 'traffic',\n",
-       " 'human',\n",
-       " 'slavery']"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[count_vect.get_feature_names()[i] for i in np.argsort(topic_components[0])[-10:]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "voxHyv67-Or3",
-    "outputId": "751d67de-3213-42ca-a732-caac5c32dfcf"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['london',\n",
-       " 'suppliers',\n",
-       " 'business',\n",
-       " 'supply',\n",
-       " 'service',\n",
-       " 'uk',\n",
-       " 'group',\n",
-       " 'modern',\n",
-       " 'slavery',\n",
-       " 'limit']"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[count_vect.get_feature_names()[i] for i in np.argsort(topic_components[1])[-10:]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "Cxb6XBlJ_ZUa",
-    "outputId": "d54935f4-1932-401e-87d9-8c8a77512df9"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['site',\n",
-       " 'include',\n",
-       " 'website',\n",
-       " 'us',\n",
-       " 'data',\n",
-       " 'provide',\n",
-       " 'service',\n",
-       " 'may',\n",
-       " 'information',\n",
-       " 'use']"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[count_vect.get_feature_names()[i] for i in np.argsort(topic_components[2])[-10:]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "8bh4DcKf_goM",
-    "outputId": "49d86da3-5e9d-4bdc-a1ba-119344ddef2c"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['business',\n",
-       " 'human',\n",
-       " 'group',\n",
-       " 'chain',\n",
-       " 'work',\n",
-       " 'supply',\n",
-       " 'suppliers',\n",
-       " 'risk',\n",
-       " 'modern',\n",
-       " 'slavery']"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[count_vect.get_feature_names()[i] for i in np.argsort(topic_components[3])[-10:]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "4iw6CgCV_i5g",
-    "outputId": "2ff0dfc1-943a-437c-9265-0941e2d6810c"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['include',\n",
-       " 'supplier',\n",
-       " 'business',\n",
-       " 'chain',\n",
-       " 'supply',\n",
-       " 'code',\n",
-       " 'conduct',\n",
-       " 'suppliers',\n",
-       " 'right',\n",
-       " 'human']"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[count_vect.get_feature_names()[i] for i in np.argsort(topic_components[4])[-10:]]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -393,9 +285,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "modern_slavery",
    "language": "python",
-   "name": "python3"
+   "name": "modern_slavery"
   },
   "language_info": {
    "codemirror_mode": {
@@ -407,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
