Topic Modelling on unique statements and addtional document-term filteration

--- a/notebooks/20201203-topic-modelling-slavery-statements.ipynb
+++ b/notebooks/20201203-topic-modelling-slavery-statements.ipynb
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -491,6 +491,16 @@
       "iteration: 9 of max_iter: 10\n",
       "iteration: 10 of max_iter: 10\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LatentDirichletAllocation(n_jobs=-1, random_state=40, verbose=1)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -504,9 +514,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Topic 0: ['group', 'limit', 'within', 'uk', 'service', 'place', 'policies', 'part', 'process', 'staff', 'year', 'financial', 'train', 'review', 'work']\n",
+      "\n",
+      "Topic 1: ['service', 'work', 'support', 'staff', 'council', 'trust', 'safeguard', 'people', 'care', 'uk', 'home', 'report', 'procurement', 'provide', 'new']\n",
+      "\n",
+      "Topic 2: ['use', 'information', 'data', 'us', 'may', 'website', 'service', 'personal', 'site', 'cookies', 'term', 'privacy', 'provide', 'contact', 'right']\n",
+      "\n",
+      "Topic 3: ['conduct', 'code', 'supplier', 'labor', 'compliance', 'audit', 'require', 'standards', 'laws', 'train', 'force', 'comply', 'applicable', 'right', 'provide']\n",
+      "\n",
+      "Topic 4: ['right', 'work', 'global', 'value', 'management', 'principles', 'people', 'support', 'conduct', 'service', 'respect', 'report', 'world', 'corporate', 'policies']\n",
+      "\n",
+      "Topic 5: ['group', 'right', 'conduct', 'code', 'labour', 'supplier', 'global', 'principles', 'uk', 'compliance', 'corporate', 'respect', 'sustainability', 'force', 'products']\n",
+      "\n",
+      "Topic 6: ['organisation', 'activities', 'workers', 'review', 'conduct', 'work', 'action', 'policies', 'supplier', 'train', 'code', 'use', 'labour', 'within', 'relate']\n",
+      "\n",
+      "Topic 7: ['supplier', 'train', 'work', 'service', 'process', 'group', 'uk', 'report', 'provide', 'labour', 'identify', 'within', 'review', 'assessment', 'right']\n",
+      "\n",
+      "Topic 8: ['work', 'labour', 'ethical', 'workers', 'right', 'audit', 'source', 'trade', 'issue', 'uk', 'train', 'practice', 'brand', 'products', 'base']\n",
+      "\n",
+      "Topic 9: ['www', 'https', 'com', 'work', 'breach', 'part', 'form', 'may', 'person', 'labour', 'responsibility', 'report', 'force', 'cking', 'us']\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "N_TOP_WORDS = 15 \n",
     "feature_names = count_vect.get_feature_names()\n",
