Added notebook for LDA on gensim corpus

--- a/notebooks/20201223-LDA-Mallet-brigrams-trigrams-Copy1.ipynb
+++ b/notebooks/20201223-LDA-Mallet-brigrams-trigrams-Copy1.ipynb
@@ -12,11 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {
     "id": "l7WeR-r6uf4x"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-2-2efdd0a27011>:8: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  from tqdm.autonotebook import tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.feature_extraction.text import (CountVectorizer,\n",
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "id": "19-wl6Uw8GLu"
    },
@@ -101,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -182,7 +191,7 @@
        "4  fh modern slavery act slavery human traffic st...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,13 +202,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4174187a8a184d9698eab72efaf9ca48",
+       "model_id": "1bfb3bc6202740449676f3eeef7f1da8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -248,18 +257,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "717a2bb9a3224493bcc8efc52887bbf6",
+       "model_id": "5b904b7b0f5242b49defaa04cc4b8240",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "|          | 0/? [00:00<?, ?it/s]"
+       "0it [00:00, ?it/s]"
       ]
      },
      "metadata": {},
@@ -287,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +398,7 @@
        "max    9.016000e+04  9.295495e-01"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "id": "66EntRIr8LwH"
    },
@@ -430,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -449,13 +458,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a15b6d4e98094982be7b4c96d66e7f3d",
+       "model_id": "dd2c74963d414f3e9acf827c1a6eee2d",
        "version_major": 2,
        "version_minor": 0
       },
